# taglet

./: .gitignore  LICENSE  README.md  dicom_editor_spec.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: sync-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  image.rs  mod.rs  plan.rs  structure.rs  tags.rs  validate.rs
src-tauri/src/dicom/: mod.rs  model.rs  parser.rs  vr.rs
src/components/: AboutDialog.tsx  AddTagDialog.tsx  BevViewer.tsx  ConfirmDeleteDialog.tsx  DocumentTabs.tsx  ImageViewer.tsx  RtStructViewer.tsx  TagRow.tsx  TagTable.tsx  Toolbar.tsx  UpdateChecker.tsx  ValueCell.tsx
src/data/: dicomTags.ts
src/hooks/: useDicomFile.ts
src/types/: dicom.ts
